# analise-de-necessidade-de-btu

./: .gitignore  README.md  entrada.csv  entrada_avancado.txt  entrada_simples.txt  main.cpp  programa  saida.csv  simulador.db  testes
ambiente/: Ambiente.cpp  Ambiente.h  Pessoa.cpp  Pessoa.h
calculos/: CalculadoraBTU.cpp  CalculadoraBTU.h  CalculadoraBTUAvancado.cpp  CalculadoraBTUAvancado.h
entrada/: EntradaArquivo.cpp  EntradaArquivo.h  EntradaConsole.cpp  EntradaConsole.h  GeradorEntrada.cpp  GeradorEntrada.h  LeitorCSV.cpp  LeitorCSV.h  LeitorEntrada.h
equipamentos/: AparelhoEletronico.h  Celular.cpp  Celular.h  Computador.cpp  Computador.h  Televisao.cpp  Televisao.h
interface/: CMakeLists.txt  GraficoBTU.cpp  GraficoBTU.h  MainWindow.cpp  MainWindow.h  MapaCalorBTU.cpp  MapaCalorBTU.h  main.cpp
simulacao/: CenarioSimulacao.cpp  CenarioSimulacao.h  EscritorResultado.cpp  EscritorResultado.h  ResultadoSimulacao-odb.cxx  ResultadoSimulacao-odb.hxx  ResultadoSimulacao-odb.ixx  ResultadoSimulacao.cpp  ResultadoSimulacao.h  ResultadoSimulacao.sql  Simulador.cpp  Simulador.h
